--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
-  "license": "MIT",
-  "author": "",
+  "repository": "github:onehilltech/ember-blueprint-data",
+  "license": "Apache-2.0",
+  "author": "James H. Hill <james@onehilltech.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -35,6 +35,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-data": "^3.3.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
