--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.10.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-data",
+    "blueprint"
   ],
   "repository": "github:onehilltech/ember-blueprint-data",
   "license": "Apache-2.0",
@@ -20,7 +22,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.6.0"
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-blueprint-helpers": "^0.4.7"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.7.0",
@@ -36,6 +39,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "^3.3.0",
+    "ember-data-model-fragments": "^5.0.0-beta.5",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
