--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "^3.3.0",
-    "ember-data-model-fragments": "^5.0.0-beta.5",
+    "ember-data-model-fragments": "^6.0.8",
     "ember-load-initializers": "^2.1.2",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.2.0",
