--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-data": "^3.3.0",
+    "ember-compatibility-helpers": "^1.2.7",
+    "ember-data": "^4.12.7",
     "ember-data-model-fragments": "^6.0.8",
     "ember-load-initializers": "^2.1.2",
     "ember-page-title": "^7.0.0",
